# gorzdrav_autoappointments

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  manual_subscription.py  pyproject.toml
bot/: __main__.py  loader.py
bot/api/: __init__.py  client.py  constants.py  models.py  utils.py
bot/database/: __init__.py  base.py  database.py  models.py  repositories.py
bot/db/: __init__.py  base.py  context.py  engine.py  types.py
bot/db/migrations/: env.py
bot/db/migrations/versions/: 2025-09-05-13-07_f1ec0182626c.py  2025-09-06-10-28_2f833681dc1b.py  2025-09-06-12-02_5cc492a1f817.py  2025-09-06-12-03_b88a79da5228.py  2025-09-06-14-44_a5302d822873.py  2025-09-06-15-19_1558662a10c4.py  2025-09-06-15-26_fde73dba3d61.py  2025-09-06-16-01_b66dddf638f5.py  2025-09-06-16-42_44a99eb9090d.py
bot/db/models/: __init__.py  enums.py  patients.py  payments.py  schedules.py  users.py
bot/db/services/: __init__.py  base.py  patients.py  payments.py  schedules.py  users.py
bot/files/: privacy_policy.txt  user_agreement.txt
bot/routers/: __init__.py  appointments.py  patients.py  payments.py  register.py  schedule.py  schedules.py  start.py  subscription.py
bot/settings/: logging.py  settings.py
bot/utils/: callbacks.py  commands.py  files.py  keyboards.py  scheduler.py  session.py  states.py  subscriptions.py  texts.py
