[project]
name = "gorzdrav-autoappointments"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniil Pavlovich",email = "layred.dota2@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "orjson (>=3.11.3,<4.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "aiosqlite (>=0.19.0,<1.0.0)",
    "greenlet (>=3.2.4,<4.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
