[project]
name = "gorzdrav-autoappointments"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniil Pavlovich",email = "layred.dota2@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "orjson (>=3.11.3,<4.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "aiogram-fsm-storage (>=0.1.8,<0.2.0)",
    "asyncpg[sa] (>=0.30.0,<0.31.0)",
    "yarl (>=1.20.1,<2.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
mypy = "^1.17.1"
black = "^25.1.0"
ruff = "^0.12.12"
watchfiles = "^1.1.0"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["bot",]

[tool.mypy]
strict = true
ignore_missing_imports = true
# allow_subclassing_any = true
# allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
# allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

# Remove this and add `types-redis`
# when the issue https://github.com/python/typeshed/issues/8242 is resolved.
[[tool.mypy.overrides]]
module = [
    'redis.asyncio'
]
ignore_missing_imports = true

[tool.ruff]
# List of enabled rulsets.
# See https://docs.astral.sh/ruff/rules/ for more information.
lint.select = [
    "E",   # Error
    "F",   # Pyflakes
    "W",   # Pycodestyle
    "C90", # McCabe complexity
    "I",   # Isort
    "N",   # pep8-naming
    "D",   # Pydocstyle
    "ANN", # Pytype annotations
    "S",   # Bandit
    "B",   # Bugbear
    "COM", # Commas
    "C4",  # Comprehensions
    "ISC", # Implicit string concat
    "PIE", # Unnecessary code
    "T20", # Catch prints
    "TCH",
    "PYI", # validate pyi files
    "Q",   # Checks for quotes
    "RSE", # Checks raise statements
    "RET", # Checks return statements
    "SLF", # Self checks
    "SIM", # Simplificator
    "PTH", # Pathlib checks
    "ERA", # Checks for commented out code
    "PL",  # PyLint checks
    "RUF", # Specific to Ruff checks
]

lint.ignore = [
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "B008",    # Do not perform function calls in argument defaults
    "D211",    # No blank lines allowed before class docstring
    "D212",    # Multi-line docstring summary should start at the first line
    "D401",    # First line should be in imperative mood
    "D104",    # Missing docstring in public package
    "D100",    # Missing docstring in public module
    "D202",    # No blank lines allowed after function docstring
    "ANN401",  # typing.Any are disallowed in `**kwargs
    "PLR0913", # Too many arguments for function call
    "D106",    # Missing docstring in public nested class
    "D100",    # Missing docstring in public module
    "RUF001",  # Ignore ambiguous strings
    "RUF003"   # Ignore ambiguous comments
]
lint.fixable = ["ALL"]
lint.unfixable = []
unsafe-fixes = true
fix = true
exclude = [
    "bot/db/migrations",
    ".venv/",
]
lint.mccabe = { max-complexity = 10 }
line-length = 88

[tool.ruff.lint.pydocstyle]
convention = "pep257"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str", "float", "bytes"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
